Update 'bqvhgqqtp-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:33b0046c991bd186e65ddaa3e8fc11a9635a463e@sha256:f6db6c10637750f9f229613c117c825e8ec55ee27e0ce02ccbddd00113f6a602

--- a/components/bqvhgqqtp-python/overlays/development/deployment-patch.yaml
+++ b/components/bqvhgqqtp-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: bqvhgqqtp-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:33b0046c991bd186e65ddaa3e8fc11a9635a463e@sha256:f6db6c10637750f9f229613c117c825e8ec55ee27e0ce02ccbddd00113f6a602
+          name: container-image
